<resources>
    <!-- General -->
    <string name="app_name">MDSandbox Pro</string>

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name_first">First Name</string>
    <string name="name_last">Last Name</string>
    <string name="submit">Submit</string>

    <!-- Activity Titles & Co -->
    <string name="activity_login">Login</string>

    <!-- Login Strings -->
    <string name="login_new_user">New User</string>
    <string name="login_intro_welcome">No account?\nLet\'s fix that!</string>
    <string name="login_new_user_info_request">Please tell us about you!</string>
    <string name="login_opt_password">Check this box if you DO want to use a PASSWORD</string>

    <!-- Form Strings -->
    <string name="error_blank">Field cannot be blank</string>
    <string name="error_invalid_name">Allowed characters: A–Z a–z 0–9 . _ - and space</string>
    <string name="error_invalid_userpass">Allowed characters: A–Z a–z 0–9 . _</string>
    <string name="error_duplicate_username">Sorry, the username is in use</string>

    <!-- Drawer Strings -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
</resources>